# voice-cv-agent

./: .gitignore  CLAUDE.md  PRD.md  README.md  agent.py  llm_client.py  main.py  pyproject.toml  resume_parser.py  transcriber.py
tools/: github_tools.py
